# arc

./: .gitignore  Cargo.toml  LICENSE  README.md  syntax.md
src/: main.rs
src/args/: command.rs  helper.rs  methods.rs  mod.rs
src/funcs/: mod.rs  process.rs  structs.rs
src/lexer/: lexer.rs  lexer_lite.rs  mod.rs  patterns.rs  token.rs  traits.rs
src/parse/: meta.rs  mod.rs  node.rs  parse.rs  table.rs  tree.rs
src/test/: color.rs  funcs.rs  html.rs  import.rs  lexer.rs  meta.rs  mod.rs  node.rs  parse.rs  parse_html.rs  regex.rs  regex1.rs  regex2.rs  table.rs  tree.rs
src/types/: constants.rs  mod.rs  style.rs
src/utilities/: color.rs  constants.rs  mod.rs  stdout.rs  style.rs
src/utilities/lib/: ce.rs  fmt.rs  math.rs  mod.rs
