[package]
name = "arc"
version = "0.4.4"
edition = "2024"

[dependencies]
fancy-regex = "0.16.1"
maud = "0.27.0"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
headless_chrome = "1.0.17"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
# notify-debouncer-mini = "0.7.0"
# tokio-tungstenite = "0.27.0"
# futures-util = "0.3.31"
inquire = "0.7.5"
